restriccion de agregar fotografia a concursantes inscriptos

--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -162,7 +162,7 @@
                 "
               >
                 <ion-button
-                  (click)="toggleFiltro()"
+                  (click)="mostrarFiltro = !mostrarFiltro"
                   color="medium"
                   expand="block"
                   class="
