fix scroll de concurso detail, btn sort para algunas columnas de concursantes y fotografias

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,16 @@
     <app-navbar *ngIf="router.url != '/login'"></app-navbar>
   </ion-header>
 
-    <ion-content >
-      <!-- sidebar -->
-      <app-sidebar></app-sidebar>
-      <ion-router-outlet id="main-content"></ion-router-outlet>
-    </ion-content>
+  <ion-content >
+    <!-- sidebar -->
+    <app-sidebar></app-sidebar>
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+  </ion-content>
+  <!-- <ion-footer class="ion-no-border">
+    <ion-toolbar>
+      <ion-title>Footer - No Border</ion-title>
+    </ion-toolbar>
+  </ion-footer> -->
   <!-- </ion-split-pane> -->
+
 </ion-app>
