--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -18,7 +18,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <div slot="start" class="inner-content ion-float-md-start">
+  <div slot="start" class="w-100 inner-content ion-float-md-start">
     <ion-grid>
       <ion-row class="ion-justify-content-center ion-align-self-center">
         <ion-col>
