--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -181,15 +181,41 @@
             <ion-item color="dark">
               <ion-grid>
                 <ion-row>
-                  <ion-col 
-                    ><b
-                      >Concursante</b
-                    ></ion-col
+                  <ion-col>
+                    <ion-row class="ion-align-items-center">
+                      <b>Concursante</b>
+                      <app-btn-sort style="margin-left: 8px"
+                        [sortFn]="ordenarPorApellido"
+                        [data]="inscriptos"
+                        (sorted)="inscriptos = $event"
+                      ></app-btn-sort>
+                      <!-- <ion-button (click)="ordenarPorApellido()"
+                        size="small" [fill]="ordenamientoFill" color="light"
+                        [title]="ordenamientoTitle"
+                        class="ion-margin-start"
+                      >
+                        <ion-icon name="swap-vertical-outline"
+                          [style]="ordenamientoStyle"
+                        ></ion-icon>
+                      </ion-button> -->
+                    </ion-row>
+                  </ion-col
                   >
                   <!-- *ngIf="rolificador.isAdmin(userLogged)" -->
                   <ion-col size="3.5" size-md="2" *ngIf="rolificador.isAdmin(userLogged)"
-                  ><b>Entidad</b></ion-col
+                    class="ion-hide-sm-down"
                   >
+                    <!-- <b>Entidad</b> -->
+                    
+                    <ion-row class="ion-align-items-center">
+                      <b>Entidad</b>
+                      <app-btn-sort style="margin-left: 8px"
+                        [sortFn]="ordenarPorFotoclub"
+                        [data]="inscriptos"
+                        (sorted)="inscriptos = $event"
+                      ></app-btn-sort>
+                    </ion-row>
+                  </ion-col>
                   <ion-col size="2" size-md="1"><b></b></ion-col>
                 </ion-row>
               </ion-grid>
@@ -214,7 +240,7 @@
                           <ion-col size="3" size-sm="1.3">
                             <app-usuario-img src="fafafa"></app-usuario-img>
                           </ion-col>
-                          <ion-col size="9" size-sm="10.7">
+                          <ion-col size="8" size-sm="10.7">
                             <ion-label class="ion-margin-start">
                               <ion-card-subtitle title="Username"
                                 >{{m.profile.user.username}}</ion-card-subtitle
