--- a/src/app/shared/btn-sort/btn-sort.component.html
+++ b/src/app/shared/btn-sort/btn-sort.component.html
@@ -2,6 +2,7 @@
 <ion-button (click)="ordenar()"
   size="small" [fill]="ordenamientoFill" color="light"
   [title]="ordenamientoTitle"
+  [disabled]="disabled"
 >
   <ion-icon name="swap-vertical-outline"
     [style]="ordenamientoStyle"
