--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.scss
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.scss
@@ -1,3 +1,14 @@
 .lista-elem {
    --inner-padding-end: 0;
 }
+
+.thead {
+   display: flex;
+   justify-content: flex-start;
+   align-items: center;
+
+   @media(max-width:767px) {
+       flex-direction: column;
+       margin-top: 12px;
+   }
+}
