--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -48,7 +48,12 @@
                       size-sm="3"
                       class="ion-align-self-center"
                     >
-                      <ion-button
+                      <app-btn-post
+                        [posting]="posting"
+                        [disabled]="!datosCargados()"
+                        (click)="inscribirConcursante()"
+                      ></app-btn-post>
+                      <!-- <ion-button
                         expand="block"
                         type="submit"
                         (click)="inscribirConcursante()"
@@ -60,7 +65,7 @@
                           size="small"
                         ></ion-spinner>
                         Guardar
-                      </ion-button>
+                      </ion-button> -->
                     </ion-col>
 
                     <ion-col
