--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -109,7 +109,11 @@
                   size-sm="3"
                   class="ion-align-self-center"
                 >
-                  <ion-button
+                  <app-btn-post
+                    [posting]="posting"
+                    [disabled]="!f.valid"
+                  ></app-btn-post>
+                  <!-- <ion-button
                     expand="block"
                     type="submit"
                     [disabled]="!f.valid"
@@ -120,7 +124,7 @@
                       size="small"
                     ></ion-spinner>
                     Guardar
-                  </ion-button>
+                  </ion-button> -->
                 </ion-col>
 
                 <ion-col
