--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -160,7 +160,11 @@
                     size-sm="3"
                     class="ion-align-self-center"
                   >
-                    <ion-button
+                    <app-btn-post
+                      [posting]="posting"
+                      [disabled]="!f.valid"
+                    ></app-btn-post>
+                    <!-- <ion-button
                       expand="block"
                       type="submit"
                       [disabled]="!f.valid"
@@ -171,7 +175,7 @@
                         size="small"
                       ></ion-spinner>
                       Guardar
-                    </ion-button>
+                    </ion-button> -->
                   </ion-col>
             
                   <ion-col
