--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -149,10 +149,12 @@
           </ion-row>
 
           <ion-row class="ion-align-items-center ion-padding-bottom">
-            <ion-col size="10" size-sm="11"
-              ><app-search-bar [atributos]="['Titulo', 'Codigo']">
-              </app-search-bar
-            ></ion-col>
+            <ion-col size="10" size-sm="11">
+              <app-search-bar 
+                [(data)]="resultadosConcurso"
+                [atributosObj]="atributosBusqueda">
+              </app-search-bar>
+            </ion-col>
             <ion-col size="2" size-sm="1">
               <ion-row
                 class="
