--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -100,13 +100,17 @@
               </ion-row>
 
               <ion-row class="ion-align-items-center">
-                <ion-col
-                  ><app-search-bar
+                <ion-col>
+                  <!-- <app-search-bar
                     (buscar)="filtrarUsuarios($event)"
                     [atributos]="['username', 'email']"
-                  >
-                  </app-search-bar
-                ></ion-col>
+                  ></app-search-bar> -->
+                  
+                  <!-- <app-search-bar 
+                  [(data)]="miembros"
+                  [atributosObj]="atributosBusqueda"
+                  ></app-search-bar> -->
+                </ion-col>
                 <ion-col size="2" size-sm="1">
                   <ion-row
                     class="
