--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -26,6 +26,7 @@
                 <ion-item class="w-100 ion-margin-bottom">
                   <ion-label position="floating">Titulo</ion-label>
                   <ion-input
+                  autocapitalize="sentences"
                     [(ngModel)]="image.title"
                     ngDefaultControl
                   ></ion-input>
