--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!-- <ion-header> -->
 <ion-toolbar color="dark">
-  <ion-buttons slot="start">
+  <ion-buttons [routerLink]="['/concursos']"  slot="start">
     <ion-thumbnail>
       <ion-img src="../../../assets/GFC logo.png"></ion-img>
     </ion-thumbnail>
