--- a/src/app/usuario/usuario-edit/usuario-edit.page.html
+++ b/src/app/usuario/usuario-edit/usuario-edit.page.html
@@ -22,6 +22,7 @@
               class="expand-full"
                 name="username"
                 [ngModel]="usuario.username"
+                autocapitalize="words"
                 required
               ></ion-input>
             <!-- </ion-col> -->
