--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -184,7 +184,7 @@
                           <ion-col size="8" size-sm="10.7">
                             <ion-label class="ion-margin-start">
                               <ion-card-subtitle title="Username"
-                                >{{m.user.username}}</ion-card-subtitle
+                                ><i>@{{m.user.username}}</i></ion-card-subtitle
                               >
                               <ion-text title="Nombre">
                                 <b>{{m.name}} {{m.last_name}}</b>
