componente search select, actualizacion search bar, avance filtro lateral en abm usuarios

--- a/src/app/shared/search-bar/search-bar.component.scss
+++ b/src/app/shared/search-bar/search-bar.component.scss
@@ -1,7 +1,7 @@
 .search-bar {
     position: relative;
   
-    ion-select {
+    ion-select.inner-select {
       --ion-margin: 2em;
       position: absolute;
       right: 0
