--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,21 +1,55 @@
 <ion-item class="search-bar">
-  <ion-searchbar #queryInput
-    (ionInput)="output()"
-    show-clear-button="never"
-    [showCancelButton]="cancelbuttonStatus"
-    cancel-button-icon="close-outline"
-  ></ion-searchbar>
-  <ion-select #atributoSelect
-    (ionChange)="output()"
-    [value]="getAtributoValor(atributosPasados[0])"
-    interface="popover" class="ion-margin-end"
-  >
-    <ion-select-option 
-      *ngFor="let a of atributosPasados" 
-      [value]="getAtributoValor(a)"
-    >{{getAtributoValorMostrado(a)}}</ion-select-option>
-    
-    <!-- <ion-select-option value="username">Username</ion-select-option>
-    <ion-select-option value="email">Email</ion-select-option> -->
-  </ion-select>
+  <ion-col>
+
+    <ion-row>
+      <ion-searchbar #queryInput
+        (ionInput)="output()"
+        show-clear-button="never"
+        [showCancelButton]="cancelbuttonStatus"
+        cancel-button-icon="close-outline"
+      ></ion-searchbar>
+      <!-- #atributoSelect -->
+      <ion-select 
+        *ngIf="innerSelect"
+        (ionChange)="output()"
+        [(ngModel)]="atributoSelected"
+        interface="popover" class="ion-margin-end"
+      >
+      <!-- no funciona ngModel -->
+        <!-- [value]="getAtributoValor(atributosPasados[0])" -->
+        <ion-select-option 
+          *ngFor="let a of atributosPasados" 
+          [value]="getAtributoValor(a)"
+        >{{getAtributoValorMostrado(a)}}</ion-select-option>
+        
+        <!-- <ion-select-option value="username">Username</ion-select-option>
+        <ion-select-option value="email">Email</ion-select-option> -->
+      </ion-select>
+    </ion-row>
+    <ion-row *ngIf="!innerSelect">
+      <ion-list>
+        <ion-radio-group 
+          (ionChange)="changeRadio($event.target.value)"
+          [value]="atributoSelected"
+          [allowEmptySelection]="true"  
+        >
+          <ion-list-header>
+            <ion-row class="ion-align-items-center">
+              <ion-label>Filtrar por:</ion-label>
+              <ion-button *ngIf="atributoSelected != ''"
+                (click)="changeRadio()" fill="clear" class="">
+                <ion-icon name="close-outline"></ion-icon>
+              </ion-button>
+            </ion-row>
+          </ion-list-header>
+  
+          <ion-item *ngFor="let a of atributosObj">
+            <ion-label>{{a.valorMostrado}}</ion-label>
+            <ion-radio slot="start" [value]="a.valor"></ion-radio>
+          </ion-item>
+        </ion-radio-group>
+      </ion-list>
+    </ion-row>
+  </ion-col>
+
 </ion-item>
