--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -5,7 +5,35 @@
         <ion-col>
           <ion-title class="ion-margin-top">Búsqueda</ion-title>
 
-          <ion-list>
+          <!-- <app-search-bar
+            (buscar)="filtrarUsuarios($event)"
+            [atributos]="['username', 'email']"
+          ></app-search-bar> -->
+          <app-search-bar 
+            [(data)]="miembros"
+            [atributosObj]="atributosBusqueda"
+          >
+          </app-search-bar>
+
+          <!-- [(data)]="miembros" -->
+          <app-search-select
+            title="Asociación"
+            [optionsProps]="filtrado.fotoclub.options"
+            [optionsData]="fotoclubs"
+            >  
+            <!-- [filterCallback]="funcionesFiltrado['fotoclub']" -->
+            <!-- interface="popover" -->
+          </app-search-select>
+          <!-- [(data)]="miembros" -->
+          <app-search-select
+            title="Rol"
+            [optionsProps]="filtrado.rol.options"
+            [optionsData]="roles"
+            >  
+            <!-- [filterCallback]="funcionesFiltrado['role']" -->
+          </app-search-select>
+
+          <!-- <ion-list>
             <ion-radio-group value="biff">
               <ion-list-header>
                 <ion-label>Filtrar por:</ion-label>
@@ -34,7 +62,7 @@
                 <ion-radio slot="start" value="fotoclub"></ion-radio>
               </ion-item>
             </ion-radio-group>
-          </ion-list>
+          </ion-list> -->
 
           <ion-col>
             <!-- opcion 1 -->
@@ -50,7 +78,7 @@
           </ion-list> -->
 
             <!-- opcion 2 -->
-            <ion-list>
+            <!-- <ion-list>
               <ion-list-header>
                 <ion-label>Rol:</ion-label>
               </ion-list-header>
@@ -72,7 +100,7 @@
                   >Delegado</ion-button
                 ></ion-item
               >
-            </ion-list>
+            </ion-list> -->
           </ion-col>
         </ion-col>
       </ion-col>
@@ -142,23 +170,43 @@
                 <ion-grid>
                   <ion-col>
                     <ion-row>
-                      <ion-col size="5.5" size-md="7"
-                        ><b
-                          >{{rolificador.getNombreUsuarios(userLogged.role_id)}}</b
-                        ></ion-col
-                      >
+                      <ion-col size="5.5" size-md="7">
+                        <ion-row>
+                          <app-th-sort
+                            [sortFn]="funcionesOrdenamiento['usuario']"
+                            [(data)]="miembros"
+                            [title]="rolificador.getNombreUsuarios(userLogged.role_id)"
+                          ></app-th-sort>
+                        </ion-row>
+                        <!-- <b>{{rolificador.getNombreUsuarios(userLogged.role_id)}}</b> -->
+                      </ion-col>
                       <!-- <ion-col size="2">Email</ion-col> -->
-                      <ion-col size="2.5" size-md="2"
-                        ><ion-text *ngIf="rolificador.isAdmin(userLogged)"
-                          ><b>Rol</b></ion-text
-                        ></ion-col
-                      >
-                      <ion-col size="2.5" size-md="2"
-                        ><ion-text *ngIf="rolificador.isAdmin(userLogged)"
-                          ><b>Entidad</b></ion-text
-                        ></ion-col
-                      >
-                      <ion-col size="1.5" size-md="1"><b>Acciones</b></ion-col>
+                      <ion-col size="2.5" size-md="2">
+                        <app-th-sort *ngIf="rolificador.isAdmin(userLogged)"
+                          [sortFn]="funcionesOrdenamiento['rol']"
+                          [(data)]="miembros"
+                          title="Rol"
+                        ></app-th-sort>
+                        <!-- <ion-text *ngIf="rolificador.isAdmin(userLogged)">
+                          <b>Rol</b>
+                        </ion-text> -->
+                    </ion-col>
+                      <ion-col size="2.5" size-md="2">
+                        <ion-row>
+                          <app-th-sort *ngIf="rolificador.isAdmin(userLogged)"
+                            [sortFn]="funcionesOrdenamiento['fotoclub']"
+                            [(data)]="miembros"
+                            title="Asociación"
+                          ></app-th-sort>
+
+                        </ion-row>
+                        <!-- <ion-text *ngIf="rolificador.isAdmin(userLogged)"
+                          ><b>Asociación</b>
+                        </ion-text> -->
+                      </ion-col>
+                      <ion-col size="1.5" size-md="1">
+                        <!-- <b>Acciones</b> -->
+                      </ion-col>
                     </ion-row>
                   </ion-col>
                 </ion-grid>
@@ -166,16 +214,14 @@
             </ion-list>
 
             <!-- <div *ngIf="(users | async) as usuarios"> -->
-            <div *ngIf="(miembros | async) as miembros; else spinner">
+            <!-- <div *ngIf="(miembros | async) as miembros; else spinner"> -->
               <ion-list *ngIf="miembros.length > 0; else texto">
                 <ion-item *ngFor="let m of miembros">
                   <ion-grid>
                     <ion-row size="12">
                       <ion-col size="12" size-md="7" size-sm="5.5">
                         <ion-row
-                          class="
-                            ion-align-items-center ion-justify-content-between
-                          "
+                          class="ion-align-items-center ion-justify-content-between"
                         >
                           <!-- user card -->
                           <ion-col size="3" size-sm="1.3">
@@ -256,12 +302,12 @@
                   >
                 </ion-item>
               </ng-template>
-            </div>
+            <!-- </div>
             <ng-template #spinner>
               <ion-row class="ion-justify-content-center">
                 <ion-spinner ></ion-spinner>
               </ion-row>
-            </ng-template>
+            </ng-template> -->
           </ion-col>
         </ion-row>
       </ion-col>
