--- a/src/app/concursos/concurso-detail/fotografias.html
+++ b/src/app/concursos/concurso-detail/fotografias.html
@@ -189,7 +189,7 @@
                     >
                       <ion-item lines="none">
                         <ion-label>
-                          <ion-card-subtitle title="Entidad del autor"
+                          <ion-card-subtitle title="Fotoclub/Agrupación del autor"
                           >{{ getFotoclubName(r.image.profile_id) }}</ion-card-subtitle>
                           <!-- >{{ getFotoclubName(r) }}</ion-card-subtitle> -->
                           <ion-text title="Autor de la obra">
