--- a/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/change-password/change-password.component.html
@@ -20,27 +20,28 @@
 
   <div slot="start" class="w-100 inner-content ion-float-md-start">
     <ion-grid>
+      <ion-col>
       <ion-row class="ion-justify-content-center ion-align-self-center">
-        <ion-col>
-          <ion-row>
-            <ion-col>
-              <ion-row>
-                <form #f="ngForm" (ngSubmit)="changePassword(f)">
+                <form class="w-100" #f="ngForm" (ngSubmit)="changePassword(f)">
                   <ion-item class="expand-full">
                     <ion-col class="ion-no-padding">
                       <ion-row>
                         <ion-col class="ion-no-padding" size="10">
                           <ion-label position="floating">Contraseña</ion-label>
-                          <ion-input tabindex="0" id="ctr-3" type="password" class="text-right" name="old_password"
+                          <ion-input 
+                          (ionFocus)="passChangeFocus=true"
+                          (ionBlur)="passChangeFocus=false"
+                          tabindex="0" id="ctr-3" type="password" class="text-right" name="old_password"
                             [(ngModel)]="old_password"></ion-input>
-                        </ion-col>
-                        <ion-col class="ion-no-padding ion-align-self-center" size="2">
-  
-                          <app-ojo inputId="ctr-3"></app-ojo>
-                        </ion-col>
-                      </ion-row>
-                    </ion-col>
-                  </ion-item>
+                          </ion-col>
+                          <ion-col class="ion-no-padding ion-align-self-center" size="2">
+                            
+                            <app-ojo inputId="ctr-3"></app-ojo>
+                          </ion-col>
+                        </ion-row>
+                      </ion-col>
+                    </ion-item>
+                    <ion-note *ngIf="passChangeFocus">Mínimo 8 caracteres</ion-note>
                   <ion-item class="expand-full">
                     <ion-col class="ion-no-padding">
                       <ion-row>
@@ -69,12 +70,8 @@
                     </ion-col>
                   </ion-row>
                 </form>
-
-              </ion-row>
-            </ion-col>
-          </ion-row>
-        </ion-col>
       </ion-row>
+    </ion-col>
     </ion-grid>
   </div>
 </div>
