--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -318,7 +318,7 @@
                   >
                     <ion-item lines="none">
                       <ion-label>
-                        <ion-card-subtitle title="Entidad del autor"
+                        <ion-card-subtitle title="Fotoclub/Agrupación del autor"
                           >{{ getFotoclubName(r.image.profile_id)
                           }}</ion-card-subtitle
                         >
