--- a/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
+++ b/src/app/usuario/usuarios-abm/usuario-post/usuario-post.page.html
@@ -24,7 +24,7 @@
       </ion-col>
       <ion-col size-sm="12" size-md="9" size-lg="7">
         <ion-row>
-          <form #f="ngForm" (ngSubmit)="postUsuario(f)">
+          <form class="w-100" #f="ngForm" (ngSubmit)="postUsuario(f)">
             <!-- <ion-row class="ion-justify-content-center">
                 <app-usuario-img [src]="usuario.img_url"></app-usuario-img>
               </ion-row> -->
@@ -91,13 +91,18 @@
               <!-- <ion-col size-md="3" size="12"> -->
               <ion-item class="expand-full">
                 <ion-label position="floating">Username</ion-label>
-                <!-- <span>@</span> -->
+                <!-- TODO: revisar pattern -->
                 <ion-input
+                  (ionFocus)="usernameFocus=true"
+                  (ionBlur)="usernameFocus=false"
+                  autocapitalize="off"
+                  pattern="[a-zA-Z0-9]{1,20}"
                   name="username"
                   [(ngModel)]="usuario.username"
                   required
-                ></ion-input>
+                >  <ion-icon *ngIf="usernameFocus" name="at-outline" item-left></ion-icon> </ion-input>
               </ion-item>
+              <ion-note *ngIf="usernameFocus"> Máximo 20 caracteres alfanuméricos sin símbolos ni espacios</ion-note>
               <!-- </ion-col> -->
               <!-- <ion-col size-md="4" size="12"> -->
               <!-- <ion-item class="expand-full">
@@ -119,7 +124,10 @@
                       <ion-label position="floating">Contraseña</ion-label>
                       <ion-input
                         tabindex="0"
+                        (ionFocus)="passFocus=true"
+                  (ionBlur)="passFocus=false"
                         id="ctr-1"
+                        pattern=".{8,}"
                         type="password"
                         class="text-right"
                         name="password"
@@ -133,6 +141,7 @@
                   </ion-row>
                 </ion-col>
               </ion-item>
+              <ion-note *ngIf="passFocus">Mínimo 8 caracteres</ion-note>
 
               <ion-item class="expand-full" *ngIf="isUserProfile">
                 <ion-button
